--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -1,14 +1,14 @@
-# 学习网站
+# 1、学习网站
 1. [google developers](https://developers.google.com/web/updates)
 2. [google developers](https://developers.google.com/web/fundamentals/performance/rendering/avoid-large-complex-layouts-and-layout-thrashing?utm_source=devtools#avoid-forced-synchronous-layouts)
 3. [stackoverflow](https://stackoverflow.com/users/17157991/liuchengyuan)
 4. [极客时间](https://time.geekbang.org/learning/path-detail/2?utm_source=infoq_web&utm_medium=menu&utm_term=infoqwebmenu)
-# css
+# 2、css
 
 1. [bootstrap](https://www.bootcss.com/)
 2. [tailwindcss](https://www.tailwindcss.cn/)
 
-# 游戏
+# 3、游戏
 
 1. playcanvas
 2. egret
@@ -17,17 +17,17 @@
 5. Phaser.js
 6. flv.js
 
-# 即时通讯
+# 4、即时通讯
 
 1. [环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
 2. 小鹅通
 3. 声网
 
-# excel
+# 5、excel
 
 1. xlsx.js
 
-# 日志与监控、埋点
+# 6、日志与监控、埋点
 
 1. fundebug
 2. talkingdata
@@ -36,11 +36,11 @@
 5. [开源库mitojs](https://github.com/mitojs/mitojs)
 5. [开源库dora](https://github.com/dora-projects/dora/tree/master/packages/browser/src)
 
-# 动画
+# 7、动画
 
 1. TweenMax
 
-# 工具
+# 8、工具
 
 1. [正则学习](https://jex.im/regulex)
 2. Can I Use
@@ -61,7 +61,7 @@
 - https://microsoft.github.io/monaco-editor/
 
 
-# 前端学习
+# 9、前端学习
 
 1. https://github.com/amandakelake/blog
 2. https://github.com/mqyqingfeng/Blog/issues/3
@@ -98,13 +98,13 @@
 33. [how-javascript-works](https://github.com/Troland/how-javascript-works)
 
 
-# 算法
+# 10、算法
 1. [leetCode cookbook](https://books.halfrost.com/leetcode/ChapterFour/0100~0199/0135.Candy/)
 8. [算法可视化工具](https://github.com/algorithm-visualizer)
 
 
 
-# 面试
+# 11、面试
 
 1. https://github.com/azl397985856/fe-interview
 2. https://lucifer.ren/fe-interview/#/?id=javascript-%f0%9f%97%92%ef%b8%8f
@@ -112,7 +112,7 @@
 
 
 
-# 书籍
+# 12、书籍
 - WebKit技术内幕
 - javascript权威指南
 - 你不知道的javascript
@@ -122,22 +122,36 @@
 - css权威指南
 - css揭秘
 
-# canvas
+# 13、canvas
 
 - fabricjs
 
-# 屏幕录制
+# 14、屏幕录制
 - RecordRTC.js
 
 
-# chrome
+# 15、chrome
 - [Chrome comic漫画](https://www.google.com/googlebooks/chrome/big_00.html)
 
 
-# 搭建blog
+# 16、搭建blog
 ### vercel
 - https://zhuanlan.zhihu.com/p/347990778
-# 其他
+
+
+
+# 17、新技术
+
+- assemblyscript
+  - https://www.assemblyscript.org/
+- rescript
+  - https://rescript-lang.org/docs/manual/latest/function
+
+
+
+
+
+# 18、其他
 
 
 - SwitchHosts
