--- a/docs/018-基础学科/英语学习/语法/010-一般将来时.md
+++ b/docs/018-基础学科/英语学习/语法/010-一般将来时.md
@@ -5,13 +5,16 @@
 
 动词的将来时包括**一般将来时**和**过去将来时**。
 
-**一般将来时表示， 将来某个时间要发生的动作或状态，也表示将来经常或重复发生的动作。**常与表示将来的时间状语连用，如： 
-
-Tomorrow, next year, soon等。
 
 
+### 一般将来时
 
-过去将来时， 表示对过去某一段时间而言将要发生的动作或存在的状态。
+- 将来某个时间要发生的动作或状态。
+- 也表示将来经常或重复发生的动作。
+
+- 常与表示将来的时间状语连用，如： Tomorrow, next year, soon等。
+
+相对于现在来说，将要发生但是还未发生的事情。
 
 
 
@@ -20,6 +23,18 @@ Tomorrow, next year, soon等。
 I **am going to** study tomorrow.  我打算明天学习。
 
 I **will/shall** study tomorrow. 我明天要学习。
+
+
+
+### 过去将来时
+
+- 表示对过去某一段时间而言将要发生的动作或存在的状态。
+
+是相对于过去的一个时间节点来说， 即将要发生的事情。
+
+
+
+例句：
 
 I didn't' know they **were going to** live abroad. 我不知道他们打算在国外生活。
 
@@ -48,11 +63,11 @@ We **will** come to see you next week. 下周我们会来看你。
 
 You **will** carry out these instructions and report back this afternoon. 你将要执行这些指示并于今天下午报告执行情况。
 
-I think it**'ll** be hotter in Beijing next summer. 我想明年夏天北京会更热。
-
 
 
 表示状态。
+
+I think it**'ll** be hotter in Beijing next summer. 我想明年夏天北京会更热。
 
 There **will** be a computer on every student's desk in the future.将来， 每位同学的桌子上都会有一台电脑。
 
@@ -94,7 +109,7 @@ The teachers **won't** write on the blackboard with chalk any more. 老师们将
 
 The car **won't** start. 这辆车发动不起来。
 
-Oil an water **won't** mix.油和水不能混合在一起。
+Oil and water **won't** mix.油和水不能混合在一起。
 
 
 
