--- a/docs/018-基础学科/英语学习/语法/011-副词.md
+++ b/docs/018-基础学科/英语学习/语法/011-副词.md
@@ -8,13 +8,125 @@
 
 # 2、副词和形容词的区别？
 
-Adjectives and adverbs are two of the four main word classes in English, along with nouns and verbs.
+- 副词和形容词一样都有修饰功能。
+- 形容词修饰名词，副词可以修饰动词，形容词，副词， 或整个句子。
+- 副词按词汇意义可以分为方式副词，程度副词，地点副词，时间副词，频度副词，疑问副词。
+- 副词也有比较等级的变化。
 
-形容词和副词与名词和动词一起，是英语中四个主要词类中的两个。
 
-Adjectives describe the qualities of people and things. Words like *poor*, *blue* and *interesting* are adjectives. 
-形容词描述人和事物的性质。
 
-Adverbs indicate the time, place, manner, degree or frequency of an event or action. Adverbs have many different functions and can have different positions in a clause.
 
-副词表示事件或动作的时间、地点、方式、程度或频率。副词有许多不同的功能，在从句中可以有不同的位置。
+
+# 3、副词的种类
+
+### 方式副词
+
+Carefully 小心地
+
+Properly 适当地
+
+Softly 温柔地
+
+Warmly 热情地
+
+### 程度副词
+
+so 很
+
+quite 相当
+
+very 非常
+
+Much 很
+
+Almost 几乎
+
+
+
+### 地点副词
+
+here 这里
+
+there 那里
+
+Outside 
+
+
+
+### 时间副词
+
+now 
+
+then
+
+early
+
+yesterday
+
+
+
+### 频度副词
+
+always
+
+usually
+
+often
+
+never
+
+sometimes
+
+seldom
+
+once
+
+
+
+### 疑问副词
+
+how 
+
+when
+
+where
+
+why
+
+
+
+
+
+# 4、一般将形容词词尾加ly，即称为副词，但也有例外。
+
+### 规则变换
+
+Careful      carefully
+
+Slow    slowly
+
+### 同形
+
+hard  Hard
+
+Fast.  fast
+
+### 特殊变换
+
+good   well
+
+
+
+
+
+# 5、副词的用法
+
+
+
+# 6、副词的比较等级
+
+- 副词比较级的构成和意义类似于形容词的比较级。
+
+- 一般可在词后加后缀-er，-est构成，还可借助more，most构成比较级和最高级。
+- 少数副词的比较级是不规则的。
+
