--- a/docs/018-基础学科/英语学习/语法/非谓语动词.md
+++ b/docs/018-基础学科/英语学习/语法/非谓语动词.md
@@ -1,13 +1,77 @@
 - https://www.jianshu.com/p/95a3672c83c3
 - https://www.xhwx100.com/article/836.html
 
-# 1、 非谓语动词
+
+
+# 谓语动词（限定性动词）
+
+谓语动词的三大本领
+
+1. 表示动作的时间
+2. 表示动作的状态
+3. 表示谓语动词的假设、情感等
+
+
+
+
+
+#  非谓语动词（非限定性动词）
 
 - 非谓语定词包括**动词不定式**、**动词-ing形式**和**过去分词**。
 - 非谓语动词没有人称和数的变化，不受主语人称和谓语动词的时态变化干扰。
+- 有时态和语态的变化。
 - 非谓语动词不能单独做谓语，可以有自己的宾语和状语。
 
 
+
+**To hear** your voice is so nice.
+
+**Reading** books makes one wise.(表主动)
+
+This is a book **written** by Balzac.（表被动）
+
+
+
+
+
+
+
+
+
+# 谓语动词和非谓语动词的区别
+
+- 谓语动词是句子的核心， 而非谓语动词只可能出现在剩下的非核心部分中。
+- 一个简单句中只能出现一个谓语动词
+
+
+
+
+
+# 动名词
+
+- 动词原形 + ing
+
+- 动词当名词使用。
+
+
+
+# 现在分词
+
+1. 现在分词基本上相当于一个形容词。通过这点可以区分动名词。
+2. 现在分词当形容词用。
+
+
+
+# 过去分词
+
+1. 动词原形 + ed
+2. 过去分词当形容词用。
+
+和现在分词的区别：
+
+1. 现在分词暗含主动， 过去分词暗含被动。
+   - the rabbit was frightened. 兔子感到害怕。
+   - The rabbit was frightening. 兔子令人感到害怕。
 
 
 
@@ -22,34 +86,38 @@
 
 #### 1、作主语
 
-To learn a foreign language is not easy.
+**To learn** a foreign language is not easy.
 
 
 
 #### 2、作表语
 
-Her job is to look after the children.
+Her job is **to look after** the children.
 
 
 
 #### 3、作宾语
 
-He wants to buy some stamps.
+He wants **to buy** some stamps.
 
 
 
 #### 4、作宾语补足语
 
-The doctor told me to have a rest.
+The doctor told me **to have** a rest.
 
 
 
 #### 5、作定语
 
-I want something to eat.
+I want something **to eat**.
+
+动词不定式要放在所修饰的名词、代词之后。
+
+He was an important meeting **to attend**.(后置定语)
 
 
 
 #### 6、作状语
 
-Yesterday they came to visit us.
+Yesterday they came **to visit** us.
