--- a/docs/007-nodejs/npm/004-常用命令.md
+++ b/docs/007-nodejs/npm/004-常用命令.md
@@ -1,17 +1,25 @@
 # npm i
-可以安装npm包，或者直接通过https地址安装。
+- 安装npm仓库的里的包
 ```
 npm i vue
 ```
 
-或
+- 通过git地址安装，可以指定分支
 ```
 npm i git+https://github.com/.....
 ```
 
-同一个包安装不同的版本
+- 安装本地包（需要在对应的包npm package）
+
+- 同一个项目安装同一个包不同的版本
 ```
 npm i antd4@npm:antd@4
 ```
 
 # npm pack
+
+# npm home react
+打开制定包的文档
+
+# 查看所有node版本
+https://nodejs.org/dist/index.json
